--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         </div>
                     </div>
                 </div>
-                <button id="bookNow" class="btn-style">Book Now</button>
+                <button class="btn-style">Book Now</button>
             </div>
 
             <div class="booking-content">
